crates/typechecker/tests/snapshots/fixture_test__import_stdlib_string.snap
---
source: crates/typechecker/tests/fixture_test.rs
expression: snapshot
---
main: fn() -> List[String]
